[package]
name = "axum-rails-cookie"
version = "0.1.3"
edition = "2021"
description = "Extract rails session cookies in axum based apps."
authors = ["Endoze <endoze@endozemedia.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Endoze/axum-rails-cookie"
documentation = "https://docs.rs/axum-rails-cookie"
homepage = "https://github.com/Endoze/axum-rails-cookie"
rust-version = "1.70.0"

[lib]
name = "axum_rails_cookie"

[dependencies]
axum = "0.7.7"
tokio = {version = "1.41.0", features=["full"]}
thiserror = "2.0"
axum-macros = "0.4"
axum-extra = {version = "0.9", features=["cookie", "cookie-private"]}
message_verifier = "2.0"

[dev-dependencies]
tower = "0.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
