[package]
name = "axum-rails-cookie"
version = "0.1.5"
edition = "2024"
description = "Extract rails session cookies in axum based apps."
authors = ["Endoze <endoze@endozemedia.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Endoze/axum-rails-cookie"
documentation = "https://docs.rs/axum-rails-cookie"
homepage = "https://github.com/Endoze/axum-rails-cookie"
rust-version = "1.86.0"
keywords = ["axum", "rails", "cookie", "session", "web"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]

[lib]
name = "axum_rails_cookie"

[dependencies]
axum = "0.8.4"
tokio = {version = "1.41.0", features=["full"]}
thiserror = "2.0"
axum-macros = "0.5.0"
axum-extra = {version = "0.10.1", features=["cookie", "cookie-private"]}
message_verifier = "2.0"

[dev-dependencies]
tower = "0.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
